--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </head>
 <body>
     
-    <h1><i>Hola, Soy Edwin Cruz</i></h1>
+    <h1><i>Hola, Soy Edwin Jhonny Cruz Poma</i></h1>
     <h1><i>Estudiante de la Carrera Ingenieria de Sistemas</i></h1>
    <button class="neon-button">Más Información</button>
 </body>
